# rust-template

./: .gitpod.yml  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
