[package]
name          = "rust-template"
version       = "0.1.0"
description   = "Some description here"
authors       = ["Yakiyo <yakiyo1206@gmail.com>"]
edition       = "2021"
license       = "MIT"
repository    = "https://github.com/Yakiyo/rust-template"
homepage      = "https://github.com/Yakiyo/rust-template"

[dependencies]
clap          = { version = "4.4.2", features = ["derive", "env"] }
clap_complete = "4.4.1"
atty          = "0.2.14"
env_logger    = "0.10.0"
home          = "0.5.5"
human-panic   = "1.2.0"
log           = "0.4.20"
yansi         = "0.5.1"

[profile.release]
panic         = 'abort'
codegen-units = 1
lto           = true
strip         = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "Yakiyo/rust-template"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
